package edu.hitsz.observer;

public interface Responser {
    void response();
}
